--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,17 +5,13 @@ mariadb_version: 10.4
 
 mariadb_debian_repo: "http://mirror.netcologne.de/mariadb/repo"
 
-# Set this to the user ansible is logging in as - should have root
-# or sudo access
-mariadb_user_home: ''
-mariadb_user_name: ''
-mariadb_user_password: ''
-
-mariadb_monitoring: true
-mariadb_monitoring_user: 'nobody'
+mariadb_monitoring:
+  enabled: true
+  system_user: "nobody"
+  username: 'monitoring'
+  password: '8WOMmRWWYHPR'
 
 mariadb_mysqltuner: true
-
 
 # The default root user installed by mysql - almost always root
 mariadb_root_home: /root
@@ -27,9 +23,6 @@ mariadb_root_password_update: true
 mariadb_user_password_update: false
 
 mariadb_enabled_on_startup: true
-
-# update my.cnf. each time role is run? true | false
-overwrite_global_mycnf: true
 
 # config settings
 # every ini part like [mysqld, galera, embedded, ...] becomes an own segment
@@ -78,101 +71,26 @@ mariadb_config_custom:
   mysqlshow: {}
   mysqlslap: {}
 
-
 mariadb_configure_swappiness: true
 mariadb_swappiness: 0
 
-# The following variables have a default value depending on operating system.
-# mariadb_pid_file: /var/run/mysqld/mysqld.pid
-# mariadb_socket: /var/lib/mysql/mysql.sock
-
-# Log file settings.
-# mariadb_log_file_group: mysql
-
-# Slow query log settings.
-# mariadb_slow_query_log_enabled: false
-# mariadb_slow_query_time: "2"
-# # The following variable has a default value depending on operating system.
-# # mariadb_slow_query_log_file: /var/log/mysql-slow.log
-#
-# # Memory settings (default values optimized ~512MB RAM).
-# mariadb_key_buffer_size: "256M"
-# mariadb_max_allowed_packet: "64M"
-# mariadb_table_open_cache: "256"
-# mariadb_sort_buffer_size: "1M"
-# mariadb_read_buffer_size: "1M"
-# mariadb_read_rnd_buffer_size: "4M"
-# mariadb_myisam_sort_buffer_size: "64M"
-# mariadb_thread_cache_size: "8"
-# mariadb_query_cache_type: "0"
-# mariadb_query_cache_size: "16M"
-# mariadb_query_cache_limit: "3M"
-# mariadb_max_connections: "15"
-# # When making adjustments, make mariadb_tmp_table_size and mariadb_max_heap_table_size equal
-# mariadb_tmp_table_size: "64M"
-# mariadb_max_heap_table_size: "64M"
-# mariadb_group_concat_max_len: "1024"
-# mariadb_join_buffer_size: "262144"
-
-# Other settings.
-mariadb_lower_case_table_names: "0"
-mariadb_wait_timeout: "28800"
-mariadb_event_scheduler_state: "OFF"
-
-# InnoDB settings.
-mariadb_innodb_file_per_table: "1"
-mariadb_supports_innodb_large_prefix: false
-# Set .._buffer_pool_size up to 80% of RAM but beware of setting too high.
-mariadb_innodb_buffer_pool_size: "256M"
-# Set .._log_file_size to 25% of buffer pool size.
-mariadb_innodb_log_file_size: "32M"
-mariadb_innodb_log_buffer_size: "8M"
-mariadb_innodb_flush_log_at_trx_commit: "1"
-mariadb_innodb_lock_wait_timeout: "50"
-
-# These settings require MySQL > 5.5.
-mariadb_innodb_large_prefix: "1"
-
-# The parameter innodb_file_format is deprecated and has no effect.
-# It may be removed in future releases.
-# See https://mariadb.com/kb/en/library/xtradbinnodb-file-format/
-# default: barracuda
-mariadb_innodb_file_format: ''
-
-mariadb_innodb_data_file_path: ibdata1:10M:autoextend:max:128M
-
-# mysqldump settings.
-mariadb_mysqldump_max_allowed_packet: "64M"
-
-# Logging settings.
-# set an *FILE* for query logging
-mariadb_log: ""
-
-# The following variables have a default value depending on operating system.
-# mariadb_log_error: /var/log/mysql/mysql.err
-# mariadb_syslog_tag: mysql
-
 # Databases.
 mariadb_databases: []
-#   - name: example
-#     collation: utf8_general_ci
-#     encoding: utf8
-#     replicate: 1
 
 # Users.
 mariadb_users: []
-#   - name: example
-#     host: 127.0.0.1
-#     password: secret
-#     priv: *.*:USAGE
 
 # Replication settings (replication is only enabled if master/user have values).
-
 mariadb_server_id: "1"
-mariadb_max_binlog_size: "100M"
-mariadb_binlog_format: "ROW"
-mariadb_expire_logs_days: "10"
-mariadb_replication_role: ''
-mariadb_replication_master: ''
-# Same keys as `mariadb_users` above.
-mariadb_replication_user: []
+
+mariadb_replication:
+  # enable / disable replication
+  enabled: false
+  # 'master' or 'replica'
+  role: ''
+  # hostname or IP for the master node
+  primary: ''
+  # Same keys as `mariadb_users` above.
+  user: []
+
+...
