--- a/molecule/with-replication/group_vars/all/vars.yml
+++ b/molecule/with-replication/group_vars/all/vars.yml
@@ -4,6 +4,8 @@
 
 mariadb_root_password: Y5FZfKXzCeOWGf4kBOiFSp6Il
 
+mariadb_instances: "{{ groups['replica'] | map('extract', hostvars, ['ansible_default_ipv4', 'address']) | list }}"
+
 mariadb_databases:
   - name: molecule
     collation: utf8mb4_bin
@@ -24,30 +26,34 @@ mariadb_config_mysqld:
   skip-name-resolve: 1
   # enable performance schema
   performance_schema: 1
-  datadir: /opt/mariadb/data
-  tmpdir: /opt/mariadb/tmp
-  log_error: /opt/mariadb/log/error.log
-  slow_query_log_file: /opt/mariadb/log/mysql-slow.log
+  # datadir: /opt/mariadb/data
+  # tmpdir: /opt/mariadb/tmp
+  # log_error: /opt/mariadb/log/error.log
+  # slow_query_log_file: /opt/mariadb/log/mysql-slow.log
+  # log_bin: /opt/mariadb/log/mysql-bin.log
   expire_logs_days: 2
   max_connections: 20
   # replication
   server-id: "{{ mariadb_server_id }}"
   relay_log: "{{ ansible_hostname }}-relay-bin"
   relay_log_index: "{{ ansible_hostname }}-relay-bin.index"
-  log_bin: /opt/mariadb/log/mysql-bin.log
   max_binlog_size: 100M
 
-mariadb_replication_master: "master"
+# mariadb_replication_master: "master"
 
 # -> https://dev.mysql.com/doc/refman/5.6/en/change-master-to.html
 # The following table shows the maximum permissible length for the string-valued options.
 # | Option          | Maximum Length |
 # | :----           | :----          |
 # | MASTER_PASSWORD | 32             |
-mariadb_replication_user:
-  name: replication
-  # The password must not be longer than 32 characters!
-  password: "vkxHlCVMHAEtEFkEB9pspPB3N"
-  encrypted: false
+mariadb_replication:
+  enabled: true
+  primary: "primary"
+  role: "{{ mariadb_replication_role }}"
+  user:
+    name: replication
+    # The password must not be longer than 32 characters!
+    password: "vkxHlCVMHAEtEFkEB9pspPB3N"
+    encrypted: false
 
 ...
