--- a/vars/centos-7.yaml
+++ b/vars/centos-7.yaml
@@ -4,6 +4,7 @@ systemd_lib_directory: "/usr/lib/systemd/system"
 
 mariadb_packages:
   - hostname
+  - iproute
   - MariaDB-client
   - MariaDB-common
   - MariaDB-server
@@ -20,12 +21,6 @@ mariadb_build_packages:
   - python-devel
 
 mariadb_python_packages: []
-#   - name: PyMySQL
-#     version: 1.0.2
-#   #- name: MySQL-python
-#   #  version: 1.2.5
-#   - name: mysql-connector
-#     version: 2.2.9
 
 mariadb_config_file: /etc/my.cnf
 
