--- a/vars/debian.yaml
+++ b/vars/debian.yaml
@@ -1,15 +1,12 @@
 ---
 
 mariadb_packages:
+  - iproute2
   - libmariadb-dev
   - mariadb-server
   - python3-mysqldb
   - python3-pip
   - python3-setuptools
-
-# mariadb_python_packages:
-#   - name: mysqlclient
-#     version: 2.0.3
 
 mariadb_config_file: /etc/mysql/my.cnf
 
