--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -44,6 +44,7 @@
       pip:
         requirements: /tmp/mariadb-requirements.txt
         state: present
+        executable: pip3
       register: pip_install
       ignore_errors: true
       no_log: true
@@ -58,6 +59,7 @@
           pip:
             requirements: /tmp/mariadb-requirements.txt
             state: present
+            executable: pip3
 
         - name: uninstall build essentials
           package:
@@ -65,8 +67,6 @@
             state: absent
       when:
         - pip_install.failed
-        - mariadb_build_packages is defined
-        - mariadb_build_packages | length > 0
   when:
     - mariadb_python_packages is defined
     - mariadb_python_packages | length > 0
