--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,6 +147,7 @@ jobs:
         image:
           - centos:7
           - centos:8
+          - oraclelinux:7
           - oraclelinux:8
         python-version:
           - '3.8'
