--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,20 +6,15 @@
 
 - include_tasks: installation.yml
 
-- name: configure mariadb
-  include_tasks: configure.yml
+- include_tasks: configure.yml
 
-- name: security changes
-  include_tasks: secure-installation.yml
+- include_tasks: secure-installation.yml
 
-- name: create monitoring stuff
-  include_tasks: monitoring.yml
+- include_tasks: monitoring.yml
 
-- name: create databases
-  include_tasks: databases.yml
+- include_tasks: databases.yml
 
-- name: create users
-  include_tasks: users.yml
+- include_tasks: users.yml
 
 - include_tasks: replication.yml
   when:
@@ -27,9 +22,6 @@
     - (mariadb_replication.role is defined and mariadb_replication.role | length > 0)
     - mariadb_replication.role in ['primary', 'replica']
 
-- name: ensure mariadb is enabled on boot
-  service:
-    name: '{{ mariadb_service }}'
-    enabled: true
+- include_tasks: service.yml
 
 ...
