--- a/tasks/prepare.yaml
+++ b/tasks/prepare.yaml
@@ -84,28 +84,28 @@
     mariadb_replication: "{{ mariadb_defaults_replication |
       combine( mariadb_replication, recursive=True ) }}"
 
-- name: ensure the ansible_python_interpreter is set to python2 (only redhat based <7)
-  set_fact:
-    ansible_python_interpreter: python2
-  when:
-    - ansible_os_family | lower == 'redhat'
-    - ansible_distribution_version | int < 8
-
-- name: detect python3
-  stat:
-    path: /usr/bin/python3
-  register: python3_bin_present
-  changed_when: not python3_bin_present.stat.exists
-
-- name: ensure the ansible_python_interpreter is set to python3
-  set_fact:
-    ansible_python_interpreter: /usr/bin/python3
-  when:
-    - ansible_python.version.major == 2
-    - python3_bin_present.stat.exists
-    - ansible_os_family | lower == 'redhat'
-    - ansible_distribution | lower == 'centos'
-    - ansible_distribution_version | int >= 8
+# - name: ensure the ansible_python_interpreter is set to python2 (only redhat based <7)
+#   set_fact:
+#     ansible_python_interpreter: python2
+#   when:
+#     - ansible_os_family | lower == 'redhat'
+#     - ansible_distribution_version | int < 8
+#
+# - name: detect python3
+#   stat:
+#     path: /usr/bin/python3
+#   register: python3_bin_present
+#   changed_when: not python3_bin_present.stat.exists
+#
+# - name: ensure the ansible_python_interpreter is set to python3
+#   set_fact:
+#     ansible_python_interpreter: /usr/bin/python3
+#   when:
+#     - ansible_python.version.major == 2
+#     - python3_bin_present.stat.exists
+#     - ansible_os_family | lower == 'redhat'
+#     - ansible_distribution | lower == 'centos'
+#     - ansible_distribution_version | int >= 8
 
 - block:
     - name: add mariadb repository
