--- a/.github/workflows/custom-datadir.yml
+++ b/.github/workflows/custom-datadir.yml
@@ -149,6 +149,7 @@ jobs:
         image:
           - centos:7
           - centos:8
+          - oraclelinux:7
           - oraclelinux:8
         python-version:
           - '3.8'
