--- a/tasks/prepare.yaml
+++ b/tasks/prepare.yaml
@@ -11,25 +11,12 @@
         - "{{ ansible_distribution | lower }}-{{ ansible_distribution_major_version }}.yaml"
         # eg. debian / ubuntu / centos / oraclelinux
         - "{{ ansible_distribution | lower }}.yaml"
-        # eg. redhat / debian
+        # eg. redhat / debian / archlinux
         - "{{ ansible_os_family | lower }}.yaml"
+        # artixlinux
+        - "{{ ansible_os_family | lower | replace(' ', '') }}.yaml"
         - default.yaml
       skip: true
-
-- block:
-    - name: make sure dnf is installed (only redhat based <8)
-      package:
-        name:
-          - dnf
-          - iproute
-        state: present
-
-    - name: get latest system information
-      setup:
-  when:
-    - ansible_os_family | lower == 'redhat'
-    - ansible_distribution | lower == 'centos'
-    - ansible_distribution_version | int < 8
 
 - block:
     - name: make sure python3-apt is installed (only debian based)
