--- a/vars/debian-9.yaml
+++ b/vars/debian-9.yaml
@@ -1,7 +1,9 @@
 ---
 
-mariadb_packages:
+mariadb_dependencies:
   - iproute2
+
+mariadb_packages:
   - libmariadb-dev
   - mariadb-server
   - python{{ '3' if ansible_python.version.major | int == 3 else '' }}-mysqldb
