--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,10 +46,8 @@ jobs:
         image:
           - archlinux:latest
         python-version:
-          - '3.8'
           - '3.9'
         ansible-version:
-          - '2.9'
           - '2.10'
 
     steps:
@@ -95,13 +93,12 @@ jobs:
         image:
           - debian:9
           - debian:10
+          - debian:11
           - ubuntu:18.04
           - ubuntu:20.04
         python-version:
-          - '3.8'
           - '3.9'
         ansible-version:
-          - '2.9'
           - '2.10'
 
     steps:
@@ -150,10 +147,8 @@ jobs:
           - oraclelinux:7
           - oraclelinux:8
         python-version:
-          - '3.8'
           - '3.9'
         ansible-version:
-          - '2.9'
           - '2.10'
 
     steps:
