fix arch based packe detection

--- a/tasks/detect_mariadb_version.yml
+++ b/tasks/detect_mariadb_version.yml
@@ -2,6 +2,7 @@
 
 - name: detect available mariadb version
   package_version:
+    state: available
     name: "{{ mariadb_server }}"
   register: package_version
 
