--- a/molecule/with-replication/prepare.yml
+++ b/molecule/with-replication/prepare.yml
@@ -5,27 +5,11 @@
   gather_facts: true
 
   pre_tasks:
-    # - name: update package cache
-    #   package:
-    #     update_cache: true
-    #
-    # - name: install netstat
-    #   package:
-    #     name:
-    #       - net-tools
-    #       - iproute2
-    #     state: present
-    #   when:
-    #     - ansible_os_family | lower in [ 'archlinux', 'debian' ]
-    #
-    # - name: install netstat
-    #   package:
-    #     name:
-    #       - iproute
-    #     state: present
-    #   when:
-    #     - ansible_os_family | lower == 'redhat'
-    #     - ansible_distribution_major_version == 7
+    - name: update pacman system
+      command: |
+        pacman --refresh --sync --sysupgrade --noconfirm
+      when:
+        - ansible_distribution | lower == 'archlinux'
 
     - debug:
         msg:
