validate mariadb users
update test matrix with ansible 5.1.x
update library funktion with cleaner names

--- a/tasks/detect_mariadb_version.yml
+++ b/tasks/detect_mariadb_version.yml
@@ -3,7 +3,7 @@
 - name: detect available mariadb version
   package_version:
     state: available
-    name: "{{ mariadb_server }}"
+    package_name: "{{ mariadb_server }}"
   register: package_version
 
 - name: define mariadb version
