--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,13 @@
 ---
 
 galaxy_info:
+  role_name: mariadb
+  namespace: bodsch
+
   author: Bodo Schulz
   description: MariaDB Server for debian (Ubuntu), RedHat (CentOS) and Arch Linux.
   company: ""
-  license: "license (BSD, MIT)"
+  license: "Apache"
   min_ansible_version: 2.9
   platforms:
     - name: Ubuntu
@@ -19,12 +22,16 @@ galaxy_info:
         - etch
         # 10
         - buster
+        # 11
+        - bullseye
     - name: EL
       versions:
         - 8
     - name: Archlinux
 
   galaxy_tags:
+    - sql
     - database
+    - mariadb
 
 dependencies: []
