--- a/tasks/prepare.yaml
+++ b/tasks/prepare.yaml
@@ -18,6 +18,21 @@
         - default.yaml
       skip: true
 
+- name: validate mariadb users
+  fail:
+    msg: "your users definition is not valid!\n
+          The following parameters are required:\n
+          - name\n
+          - password"
+  when:
+    - mariadb_users is defined
+    - mariadb_users | count > 0
+    - (not item.name is defined or item.name | length == 0) or
+      (not item.password is defined or item.password | length == 0)
+  loop: "{{ mariadb_users  }}"
+  loop_control:
+    label: "{{ item.name | default('undefined') }}"
+
 - name: update package cache
   package:
     update_cache: true
@@ -29,10 +44,6 @@
 
 - name: do facts module to get latest information
   setup:
-    # gather_subset:
-    #   - '!all'
-    #   - '!any'
-    #   - facter
 
 - name: merge mariadb configuration segment for server between defaults and custom
   set_fact:
