--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,8 @@ deps =
     -r test-requirements.txt
     ansible29: ansible>=2.9,<2.10
     ansible210: ansible>=2.10,<2.11
+    ansible340: ansible>=3.4,<3.5
+    ansible510: ansible>=5.1,<5.2
 
 commands_pre =
     /usr/bin/find {toxinidir} -type f -not -path '{toxinidir}/.tox/*' -path '*/__pycache__/*' -name '*.py[c|o]' -delete
