fix debian-9 dependecies
add 'ansible_python_interpreter: /usr/bin/python3'

--- a/vars/debian-9.yaml
+++ b/vars/debian-9.yaml
@@ -1,24 +1,20 @@
 ---
 
 mariadb_dependencies:
+  - gpg
   - iproute2
+  - python{{ '3' if ansible_python.version.major | int == 3 else '' }}-pip
+  - python{{ '3' if ansible_python.version.major | int == 3 else '' }}-setuptools
 
 mariadb_packages:
   - libmariadb-dev
   - mariadb-server
   - python{{ '3' if ansible_python.version.major | int == 3 else '' }}-mysqldb
-  - python{{ '3' if ansible_python.version.major | int == 3 else '' }}-pip
-  - python{{ '3' if ansible_python.version.major | int == 3 else '' }}-setuptools
   - python{{ '3' if ansible_python.version.major | int == 3 else '' }}-pymysql
 
 mariadb_config_file: /etc/mysql/my.cnf
 
 mariadb_config_dir: /etc/mysql
 mariadb_config_include_dir: "{{ mariadb_config_dir }}/conf.d"
-
-
-mariadb_python_packages:
-  - name: mysqlclient
-    version: 1.4.6
 
 ...
