--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,6 +3,9 @@
   hosts: all
   any_errors_fatal: false
 
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
+
   environment:
     NETRC: ''
 
