fix python requirements

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -148,6 +148,7 @@ jobs:
           - centos:8
           - oraclelinux:7
           - oraclelinux:8
+          - rockylinux:8
         python-version:
           - '3.9'
         ansible-version:
