--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,9 @@ deps =
     ansible29: ansible>=2.9,<2.10
     ansible210: ansible>=2.10,<2.11
     ansible340: ansible>=3.4,<3.5
+    ansible410: ansible>=4.10,<4.11
     ansible510: ansible>=5.1,<5.2
+    ansible520: ansible>=5.2,<5.3
 
 commands_pre =
     /usr/bin/find {toxinidir} -type f -not -path '{toxinidir}/.tox/*' -path '*/__pycache__/*' -name '*.py[c|o]' -delete
